--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,24 @@
 
     <string name="action_play_all">Play All</string>
     <string name="action_delete">Delete</string>
+
+    <!--Search-->
+    <string name="search_history">Search history</string>
+    <string name="clear_history">Clear</string>
+    <string name="searching_for_songs">Searching for songs</string>
+    <string name="songs_title">Songs</string>
+    <string name="albums_title">Albums</string>
+    <string name="artists_title">Artists</string>
+    <string name="composers_title">Composers</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="user_profile_title">User Profile</string>
+    <string name="logout">Logout</string>
+    <string name="my_playlist">My Playlist</string>
+    <string name="name">NAME</string>
+    <string name="phone_number">PHONE NUMBER</string>
+    <string name="email">EMAIL</string>
+    <string name="nick_chat">NICK CHAT</string>
+    <string name="level">LEVEL</string>
 </resources>
