--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,11 @@
     <string name="email">EMAIL</string>
     <string name="nick_chat">NICK CHAT</string>
     <string name="level">LEVEL</string>
+    
+    <string-array name="spiner">
+        <item>None</item>
+        <item>15 min</item>
+        <item>30 min</item>
+        <item>45 min</item>
+    </string-array>
 </resources>
