--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,7 @@
     <string name="email">EMAIL</string>
     <string name="nick_chat">NICK CHAT</string>
     <string name="level">LEVEL</string>
-    
+
     <string-array name="spiner">
         <item>None</item>
         <item>1 min</item>
@@ -92,4 +92,6 @@
         <item>@string/language_english_code</item>
         <item>@string/language_vietnamese_code</item>
     </string-array>
+
+    <string name="no_internet">No internet</string>
 </resources>
