--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_delete">Xóa</string>
     <string name="action_music">Âm nhạc</string>
     <string name="action_play_all">Phát tất cả</string>
-    <string name="action_playlist">DS Phát</string>
+    <string name="action_playlist">Playlist</string>
     <string name="action_search">Tìm kiếm</string>
     <string name="action_setting">Cài đặt</string>
     <string name="action_style">Điệu nhạc</string>
@@ -17,14 +17,14 @@
     <string name="category_tab_title_album">Albums</string>
     <string name="category_tab_title_hot">Hot</string>
     <string name="category_tab_title_song">Bài hát</string>
-    <string name="clear_history">Xóa</string>
+    <string name="clear_history">Xóa tất cả</string>
     <string name="composers_title">Tác giả</string>
-    <string name="email">Email</string>
+    <string name="email">EMAIL</string>
     <string name="hot_albums_title_bar">Albums Hot</string>
     <string name="hot_songs_title_bar">Bài hát Hot</string>
-    <string name="level">Cấp độ</string>
+    <string name="level">CẤP ĐỘ</string>
     <string name="logout">Đăng xuất</string>
-    <string name="my_playlist">DS Phát</string>
+    <string name="my_playlist">Playlist của tôi</string>
     <string name="name">TÊN</string>
     <string name="nick_chat">NICK CHAT</string>
     <string name="phone_number">SỐ ĐIỆN THOẠI</string>
@@ -46,18 +46,46 @@
     <string name="title_player_setting">Phát nhạc</string>
     <string name="title_search_setting">Tìm kiếm</string>
     <string name="title_setting">Cài đặt</string>
-    <string name="top_song_view"></string>
+    <string name="top_song_view">Top bài hát</string>
     <string name="email_hint">Email</string>
     <string name="forgot_password">Quên mật khẩu?</string>
     <string name="login_button">Đăng nhập</string>
     <string name="password_hint">Mật khẩu</string>
     <string name="sign_in_with">Đăng nhập với</string>
     <string name="title_login">Đăng nhập</string>
-    <string name="searching_for">"Tìm kiếm "</string>
+    <string name="searching_for">"Tìm kiếm theo "</string>
     <string name="title_search_result_1">Có</string>
     <string name="title_search_result_2">kết quả được tìm thấy cho</string>
     <string name="field_require">Bắt buộc.</string>
     <string name="login_fail">Đăng nhập thất bại...</string>
     <string name="warning_message">Vui lòng nhập email và mật khẩu.</string>
     <string name="error_message">Email hoặc mật khẩu không đúng.</string>
+    <string name="language_english" translatable="false">Tiếng Anh</string>
+    <string name="language_vietnamese" translatable="false">Tiếng Việt</string>
+    <string name="no_internet">Không có internet</string>
+    <string name="playlist_song_added">Bài hát đã tồn tại trong playlist.</string>
+    <string name="success_add_playlist">Bài hát đã được thêm vào playlist</string>
+    <string name="search_for_title">Tìm kiếm theo:</string>
+    <string name="action_cancel">Hủy</string>
+    <string name="action_delete_all">Xóa tất cả</string>
+    <string name="clear_all">Xóa tất cả</string>
+    <string name="clear_message">Bạn thật sự muốn xóa lịch sử tìm kiếm?</string>
+    <string name="delete_message">Bạn thật sự muốn xóa?</string>
+    <string name="delete_playlist_message">Bạn thật sự muốn xóa tất cả bài hát?</string>
+    <string name="delete_playlist_song">Bạn thật sự muốn xóa bài hát này?</string>
+    <string name="have_not_login">Bạn vẫn chưa đăng nhập.</string>
+    <string name="delete_a_playlist_message">Bạn thật sự muốn xóa playlist này?</string>
+    <string name="song_s">bài hát</string>
+    <string name="clear_all_message">Bạn thật sự muốn xóa tất cả lịch sử tìm kiếm?</string>
+    <string name="action_musics">Âm nhạc >></string>
+    <string name="action_OK">Đồng ý</string>
+    <string name="action_done">Hoàn thành</string>
+    <string name="create_playlist">Playlist mới</string>
+    <string name="exist_message">" thật sự đã tồn tại."</string>
+    <string name="menu_settings">Cài đặt</string>
+    <string name="song_info_title">Thông tin bài hát</string>
+    <string name="name_title">Tên:</string>
+    <string name="add_to_playlist">Thêm vào playlist</string>
+    <string name="request_login">Bạn vẫn chưa đăng nhập.</string>
+    <string name="play_list_song">Danh sách phát nhạc</string>
 </resources>
