--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -88,4 +88,5 @@
     <string name="add_to_playlist">Thêm vào playlist</string>
     <string name="request_login">Bạn vẫn chưa đăng nhập.</string>
     <string name="play_list_song">Danh sách phát nhạc</string>
+    <string name="languages">Ngôn ngữ</string>
 </resources>
