--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,5 @@
     <string name="request_login">You still haven\'t logged in.</string>
     <string name="add_to_playlist">Add to playlist</string>
     <string name="play_list_song">Song play list</string>
+    <string name="languages">Languages</string>
 </resources>
