--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,12 +23,26 @@
 
     <string name="action_play_all">Play All</string>
     <string name="action_delete">Delete</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="action_delete_all">Delete all</string>
+    <string name="action_done">Done</string>
+    <string name="action_OK">OK</string>
+    <string name="delete_playlist_message">Do you want to delete all song?</string>
+    <string name="delete_playlist_song">Do you want to delete this song?</string>
+    <string name="delete_message">Do you want to delete?</string>
+    <string name="delete_a_playlist_message">Do you want to delete this playlist?</string>
+    <string name="clear_all">Clear all</string>
+    <string name="clear_message">Do you want to clear search history?</string>
+    <string name="clear_all_message">Do you want to clear all search history?</string>
+    <string name="have_not_login">You still haven\'t logged in.</string>
+    <string name="exist_message">has already existed.</string>
 
     <!--Search-->
     <string name="search_history">Search history</string>
     <string name="clear_history">Clear all</string>
     <string name="searching_for_songs">Searching for songs</string>
     <string name="searching_for">Searching for </string>
+    <string name="search_for_title">Searching for:</string>
     <string name="songs_title">Songs</string>
     <string name="albums_title">Albums</string>
     <string name="artists_title">Artists</string>
@@ -61,9 +75,18 @@
     <string name="error_message">Email or password is incorrect.</string>
     <string name="warning_message">Please enter email and password.</string>
 
+    <!--play in background-->
+    <string name="app_version_number">1.0</string>
+    <string name="menu_settings">Settings</string>
+
+    <string name="cd_repeat">Repeat one or all</string>
+    <string name="cd_previous">Skip backwards</string>
+    <string name="cd_play">Play and pause</string>
+    <string name="cd_next">Skip forwards</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="user_profile_title">User Profile</string>
+    <string name="user_profile_title">My Profile</string>
     <string name="logout">Logout</string>
     <string name="my_playlist">My Playlist</string>
     <string name="name">NAME</string>
@@ -71,7 +94,7 @@
     <string name="email">EMAIL</string>
     <string name="nick_chat">NICK CHAT</string>
     <string name="level">LEVEL</string>
-    
+
     <string-array name="spiner">
         <item>None</item>
         <item>1 min</item>
@@ -81,7 +104,6 @@
     </string-array>
 
     <string name="language_english" translatable="false">English</string>
-    <string name="language_vietnamese" translatable="false">Tiếng Việt</string>
     <string-array name="language_names">
         <item>@string/language_english</item>
         <item>@string/language_vietnamese</item>
@@ -92,4 +114,18 @@
         <item>@string/language_english_code</item>
         <item>@string/language_vietnamese_code</item>
     </string-array>
+
+    <string name="no_internet">No internet</string>
+    <string name="playlist_song_added">Song has already existed.</string>
+    <string name="success_add_playlist">Song has added to playlist.</string>
+    <string name="language_vietnamese" translatable="false">Vietnamese</string>
+    <string name="song_s">song(s)</string>
+    <string name="action_musics">Music >></string>
+    <string name="create_playlist">New playlist</string>
+    <string name="song_info_title">Song Information</string>
+    <string name="name_title">Name:</string>
+    <string name="request_login">You still haven\'t logged in.</string>
+    <string name="add_to_playlist">Add to playlist</string>
+    <string name="play_list_song">Song play list</string>
+    <string name="languages">Languages</string>
 </resources>
